# ChangeLog for dev-libs/libflatarray
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Mar 2014; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add missing Manifest
